# RizzkTerminal

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  justfile  pyproject.toml  requirements.txt  workspace.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
Rizzk-Trading-Terminal-2/: rizzk_pro.py
apps/rizzk_pro/: journal.py  risk.py  rizzk_pro.py
assets/: styles.css
docs/: conflict-playbook.md
infra/: docker-compose.yml
obsidian/.obsidian/: workspace.json
rizzk/: __init__.py
rizzk/core/: __init__.py  backtest.py  data.py  db.py  flags.py  journal.py  logging.py  news.py  security.py  settings.py  util.py
rizzk/web/: __init__.py  layout.py
rizzk/web/pages/: __init__.py  about.py  ai.py  backtest.py  journal.py  news.py  prices.py  screener.py
scripts/: backup.ps1  bootstrap.ps1  codex_fill.py  daily_ops.py  db_init.py  dev.ps1  prod.ps1  refresh_data.py  sync_daemon.py  trade_add.py
scripts/templates/: journal.md  notebook.ipynb.tmpl  readme.md  strategy.md
tests/: conftest.py  test_data.py  test_health.py  test_imports.py  test_smoke.py
